# MarkAnn-Bot

./: .dockerignore  .env.example  .gitignore  404.html  AGENTS.md  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  nse_api_schema.yaml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: build_and_push_telegram_bot.yml  docs.yml
api/: README.md  app.py  deps.py  services.py  websocket_manager.py
api/admin/: events.py  pollers.py  pools.py  processors.py
api/v1/: watchlist.py
app/admin/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
architecture/data-flow/: index.html
architecture/engine/: index.html
architecture/overview/: index.html
architecture/registry/: index.html
architecture/security/: index.html
bot/: app.py  bots.py  commands.py  constants.py  decorators.py  services.py  utils.py
channels/: ai_engine.py  ann_channel.py  utils.py
common_managers/: job_manager.py
database/: alembic.ini  decorators.py  memory_cache.py  models.py  redis.py  session.py  user_db.py  vector_db.py
database/migrations/: README.md  alembic.ini  env.py
docker/bot/: Dockerfile  docker-compose.yml
docs/: index.md
docs/architecture/: data-flow.md  engine.md  overview.md  registry.md  security.md
docs/guides/: add-an-alert-type.md  llm-providers.md  local-development.md
docs/operations/: admin-console.md  deployment.md  observability.md  runbook.md
docs/reference/: api.md  component-contract.md  configuration.md  data-model.md
engine/: circuit_breaker.py  consumer.py  events.py  health.py  main.py  poller.py  register.py  registry.py  session.py  supervisor.py
engine/pollers/: corp_ann.py
engine/processor/: base.py  corp_ann.py  pdf.py
engine/processors/: base.py  corp_ann.py
gateway/: config.py  main.py
gateway/admin/: router.py  schemas.py  service.py
gateway/auth/: deps.py  passwords.py  router.py  service.py  tokens.py
gateway/proxy/: client.py  router.py
gateway/rate_limit/: middleware.py
guides/add-an-alert-type/: index.html
guides/llm-providers/: index.html
guides/local-development/: index.html
llm/: anthropic.py  factory.py  gemini.py  openai.py  provider.py
operations/admin-console/: index.html
operations/deployment/: index.html
operations/observability/: index.html
operations/runbook/: index.html
scripts/: dev.sh  start_api_server.sh  start_telegram_server.sh
search/: search_index.json
tests/: conftest.py
(+122 files in other folders)
