[project]
name = "markann"
version = "0.1.0"
description = "Market-alert platform for Indian stock markets (NSE)"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot>=21.3",
    "httpx>=0.27",
    "openai>=1.0",
    "anthropic>=0.30",
    "google-generativeai>=0.8",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pymupdf>=1.24",
    "pytz>=2024.1",
    "pydantic-settings>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "fakeredis>=2.23",
    "aiosqlite>=0.20",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["engine", "llm", "database", "api"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
